--- a/recordatorio.html
+++ b/recordatorio.html
@@ -5,7 +5,7 @@
   <meta name="viewport"
     content="width=device-width,
        initial-scale=1.0">
-  <title>Alumno</title>
+  <title>Recordatorio</title>
   <script
     src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js">
     </script>
@@ -30,7 +30,7 @@
   <form name="forma">
     <mi-nav></mi-nav>
     <header>
-      <h1>Alumno</h1>
+      <h1>Recordatorio</h1>
       <div class="herramientas">
         <a href="recordatorios.html">
           Cancelar</a>
